--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#neo {
+  border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+}
+
+#file {
+  border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow: inset 10px 10px 30px #bebebe, inset -10px -10px 30px #ffffff;
+}
+
+#key {
+  border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow: inset 10px 10px 20px #bebebe, inset -10px -10px 20px #ffffff;
+}
+
+#encode,
+#decode,
+#encoded-file,
+#decoded-file {
+  border-radius: 50px;
+  background: linear-gradient(145deg, #cacaca, #f0f0f0);
+  box-shadow: 10px 10px 30px #bebebe, -10px -10px 30px #ffffff;
+}
